[package]
name = "tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#Graphical library
ggez = "0.8.1"

#windows library
windows = "0.48.0"

#fenetre
winit = "0.28.3"

#winapi
winapi = "0.3.9"

#png
image = "0.24.6"

show-image = "0.13.1"
